<resources>
    <string name="app_name">Timetable App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dashboardWelcomeText">Welcome!</string>
    <string name="addLessonText">Add a new lesson</string>
    <string name="removeLessonText">Remove a lesson</string>
    <string name="updateLessonText">Update a lesson</string>
    <string name="addLessonButton">Add</string>
    <string name="removeLessonButton">Remove</string>
    <string name="updateLessonButton">Update</string>
    <string name="lessonsActionItem">Lessons</string>
    <string name="title_activity_add_lesson">AddLesson</string>
    <string name="title_activity_remove_lesson">RemoveLesson</string>
    <string name="title_activity_update_lesson">UpdateLesson</string>
    <string name="enterNameText">Enter Name:</string>
    <string name="AddButton">Add</string>
    <string name="enterLocationText">Enter Location of Lesson</string>

    <string name="spinnerDaysOfWeek">Please Select Day Of Week</string>
    <string name="feedbacktype1">Monday</string>
    <string name="feedbacktype2">Tuesday</string>
    <string name="feedbacktype3">Wednesday</string>
    <string name="feedbacktype4">Thursday</string>
    <string name="feedbacktype5">Friday</string>

    <string-array name="daysOfWeek">
        <item>@string/feedbacktype1</item>
        <item>@string/feedbacktype2</item>
        <item>@string/feedbacktype3</item>
        <item>@string/feedbacktype4</item>
        <item>@string/feedbacktype5</item>
    </string-array>

    <string name="spinnerClassType">Please Select Class Type</string>
    <string name="feedback1">Lecture</string>
    <string name="feedback2">Laboratory</string>
    <string name="feedback3">Tutorial</string>
    <string name="feedback4">Optional</string>

    <string-array name="classTypes">
        <item>@string/feedback1</item>
        <item>@string/feedback2</item>
        <item>@string/feedback3</item>
        <item>@string/feedback4</item>
    </string-array>

    <string name="title_activity_time_pick_frament">TimePickFrament</string>
    <string name="removeLesson">Remove Lesson</string>
    <string name="title_activity_my_list_adapter">MyListActivity</string>
    <string name="addTimeButtonText">Add Time</string>
    <string name="time_txt">Start Time (H:M):</string>
    <string name="time_txt2">End Time (H:M):</string>
    <string name="webViewPageText">Check out Asana.com</string>
    <string name="title_activity_maps">Map</string>

</resources>
